--- a/.github/workflows/code-coverage.yml
+++ b/.github/workflows/code-coverage.yml
@@ -21,4 +21,5 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Run code coverage
-      run: cargo coverage
+      # run: cargo coverage
+      run: cargo test --verbose
