--- a/.github/workflows/code-coverage.yml
+++ b/.github/workflows/code-coverage.yml
@@ -22,4 +22,4 @@ jobs:
     - uses: actions/checkout@v3
     - name: Run code coverage
       # run: cargo coverage
-      run: cargo test --test-threads=1 --verbose
+      run: cargo test -- --test-threads=1
