--- a/.github/workflows/code-coverage.yml
+++ b/.github/workflows/code-coverage.yml
@@ -26,5 +26,5 @@ jobs:
         with:
           tool: cargo-nextest,cargo-llvm-cov      
       - name: Run test coverage
-        # run: cargo coverage
-        run: cargo test -- --test-threads=1
+        run: cargo coverage
+        # run: cargo test -- --test-threads=1
