--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,6 +68,16 @@ jobs:
         uses: Swatinem/rust-cache@v2          
 
       - name: Generate line coverage file
+        id: coverage
+        shell: bash
         run: |
           set -e
           cargo generate-lcov
+
+      - name: Upload coverage report to codecov
+        uses: codecov/codecov-action@v3
+        token: ${{ secrets.CODECOV_TOKEN }}
+        files: lcov.info
+        fail_ci_if_error: true
+        if: steps.coverage.outcome == 'success'
+        verbose: true
