--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -77,7 +77,8 @@ jobs:
       - name: Upload coverage report to codecov
         uses: codecov/codecov-action@v3
         token: ${{ secrets.CODECOV_TOKEN }}
-        files: lcov.info
         fail_ci_if_error: true
         if: steps.coverage.outcome == 'success'
         verbose: true
+        with:
+          files: lcov.info        
