--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ env:
 
 jobs:
   test-coverage:
-    name: Build the executable
+    name: Build
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -29,7 +29,7 @@ jobs:
           cargo -V
           ldd --version | head -n1
 
-      - name: Build
+      - name: Cargo build
         id: build
         shell: bash
         run: |
