💄 Modified description prop

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.9.0"
 edition = "2021"
 authors = ["riddlewiggler"]
 rust-version = "1.70"
-description = " ffc cleans the certificate authority files used by your internet browsers"
+description = "It cleans the certificate files (PKCS11) used by your browsers"
 homepage = "https://github.com/riddlewiggler/ffc"
 repository = "https://github.com/riddlewiggler/ffc"
 license-file = "LICENSE"
