🐛 Bugfixed workflow secret reference

--- a/.github/workflows/reusable-coverage.yml
+++ b/.github/workflows/reusable-coverage.yml
@@ -9,6 +9,10 @@ on:
       rust-version:
         required: true
         type: string
+    secrets:
+      CODECOV_TOKEN:
+        required: true
+
 
 env:
   CARGO_INCREMENTAL: false
